--- a/issFinacial/Views/Installments/Index.cshtml
+++ b/issFinacial/Views/Installments/Index.cshtml
@@ -1,13 +1,12 @@
-﻿@model IEnumerable<issFinacial.Models.Vehicle>
+﻿@model IEnumerable<issFinacial.Models.Installment>
 
 @{
     ViewBag.Title = "Index";
 }
-
 <div class="page-header page-header-light">
     <div class="page-header-content header-elements-lg-inline">
         <div class="page-title d-flex">
-            <h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Vehicle</span> - Index</h4>
+            <h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Installment</span> - Index</h4>
             <a href="#" class="header-elements-toggle text-body d-lg-none"><i class="icon-more"></i></a>
         </div>
         <div class="header-elements d-none">
@@ -31,7 +30,7 @@
         <div class="d-flex">
             <div class="breadcrumb">
                 <a href="~/home/Index" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Dashboard</a>
-                <span class="breadcrumb-item active">Vehicle</span>
+                <span class="breadcrumb-item active">Installment</span>
             </div>
             <a href="#" class="header-elements-toggle text-body d-lg-none"><i class="icon-more"></i></a>
         </div>
@@ -63,7 +62,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header header-elements-inline">
-                <h5 class="card-title">Vehicle</h5>
+                <h5 class="card-title">Installment</h5>
                 <div class="header-elements">
                     <div class="list-icons">
                         @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
@@ -71,35 +70,56 @@
                     </div>
                 </div>
             </div>
-            <table class="table">
-                <tr>
-                    <th>
-                        Vehicle Code
-                    </th>
-                    <th>
-                       Vehicle Name
-                    </th>
-                    <th></th>
-                </tr>
+                        <table class="table">
+                            <tr>
+                                <th>
+                                   Loan Number
+                                </th>
+                                <th>
+                                   First Due Date
+                                </th>
+                                <th>
+                                    Due Status
+                                </th>
+                                <th>
+                                   Due Amount
+                                </th>
+                                <th>
+                                    Loan Amount
+                                </th>
+                                <th>
+                                    Number of Due
+                                </th>
+                                <th></th>
+                            </tr>
 
-                @foreach (var item in Model)
-                {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.name)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                    </td>
-                </tr>
-                }
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.loanNumber)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.firstDueDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.dueStatus)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.dueAmount)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.loanAmount)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.numberofDue)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                    </td>
+                                </tr>
+                            }
 
-            </table>
-        </div>
-    </div>
-</div>
+                        </table>
