--- a/issFinacial/Views/Shared/_Layout.cshtml
+++ b/issFinacial/Views/Shared/_Layout.cshtml
@@ -293,7 +293,7 @@
                         <!-- Main -->
                         <li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs mt-1">Main</div> <i class="icon-menu" title="Main"></i></li>
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link active">
+                            <a href="~/Home/Index" class="nav-link active">
                                 <i class="icon-home4"></i>
                                 <span>
                                     Dashboard
@@ -321,9 +321,9 @@
                         <li class="nav-item nav-item-submenu">
                             <a href="#" class="nav-link"><i class="icon-color-sampler"></i> <span>Loan</span></a>
                             <ul class="nav nav-group-sub" data-submenu-title="Themes">
-         
-                                <li class="nav-item"><a href="~/VehicleLoanEntries/Index" class="nav-link">Vehicle Loan</a></li>
 
+                                <li class="nav-item"><a href="~/VehicleLoanEntries/Index" class="nav-link">Vehicle Loan</a></li>
+                                <li class="nav-item"><a href="~/Installments/Index" class="nav-link">Installments</a></li>
 
                             </ul>
                         </li>
@@ -1026,7 +1026,7 @@
                     </div>
                     <div class="navbar-collapse collapse" id="navbar-footer">
                         <span class="navbar-text">
-                            &copy; 2015 - 2018. <a href="#">Limitless Web App Kit</a> by <a href="https://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
+                            &copy; @DateTime.Now.Year <a href="#">Financial</a> by <a href="#" target="_blank">Inspire Software Solution</a>
                         </span>
                         <ul class="navbar-nav ml-lg-auto">
                             <li class="nav-item"><a href="https://kopyov.ticksy.com/" class="navbar-nav-link" target="_blank"><i class="icon-lifebuoy mr-2"></i> Support</a></li>
