--- a/issFinacial/Views/Installments/Delete.cshtml
+++ b/issFinacial/Views/Installments/Delete.cshtml
@@ -1,14 +1,13 @@
-﻿@model issFinacial.Models.Area
+﻿@model issFinacial.Models.Installment
 
 @{
     ViewBag.Title = "Delete";
 }
 
-
 <div class="page-header page-header-light">
     <div class="page-header-content header-elements-lg-inline">
         <div class="page-title d-flex">
-            <h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Area</span> -Delete</h4>
+            <h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Installment</span> - Detail</h4>
             <a href="#" class="header-elements-toggle text-body d-lg-none"><i class="icon-more"></i></a>
         </div>
         <div class="header-elements d-none">
@@ -32,7 +31,7 @@
         <div class="d-flex">
             <div class="breadcrumb">
                 <a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Dashboard</a>
-                <span class="breadcrumb-item active">Area</span>
+                <span class="breadcrumb-item active">Installment</span>
             </div>
             <a href="#" class="header-elements-toggle text-body d-lg-none"><i class="icon-more"></i></a>
         </div>
@@ -61,6 +60,7 @@
 </div>
 <br />
 
+
 <div class="row">
     <div class="col-md-12">
         @using (Html.BeginForm())
@@ -69,7 +69,8 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="card">
-               <div class="card-header header-elements-inline">
+
+                <div class="card-header header-elements-inline">
                     <h5 class="card-title">Delete Installment</h5>
                     <h3 style="text-align:center;color:red">Are you sure you want to delete this?</h3>
                     <div class="header-elements">
@@ -79,37 +80,56 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="card-body">
                     <div class="row">
-                        <table>
-                            <tr>
-                                <th>Area Code</th>
-                                <td>id</td>
-                            </tr>
+                        <div class="col-md-9">
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">Loan Number</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.loanNumber)
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">First Due Date</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.firstDueDate)
+                                </div>
+                            </div>
 
-                        </table>
-                        <dl class="dl-horizontal">
-                            <dt>
-                                <label>Area Code</label>
-                            </dt>
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">Due Status</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.dueStatus)
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">Due Amount</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.dueAmount)
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">Loan Amount</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.loanAmount)
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-lg-2 font-weight-bold">Loan Number</label>:
+                                <div class="col-lg-9">
+                                    @Html.DisplayFor(model => model.loanNumber)
+                                </div>
+                            </div>
 
-                            <dd>
-                                @Html.DisplayFor(model => model.id)
-                            </dd>
-                            <dt>
-                                <label>Area Name</label>
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.name)
-                            </dd>
-
-                        </dl>
-
+                        </div>
 
                     </div>
+
                 </div>
             </div>
         }
     </div>
 </div>
+
+
