--- a/issFinacial/Views/VehicleLoanEntries/Create.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Create.cshtml
@@ -143,10 +143,10 @@
                                         @Html.ValidationMessageFor(model => model.areaId, "", new { @class = "text-danger" })
                                     </div>
                                     @*<div class="form-group col-md-4">
-                                        <label>Area Name</label>
-                                        @Html.EditorFor(model => model.areaName, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.areaName, "", new { @class = "text-danger" })
-                                    </div>*@
+                                            <label>Area Name</label>
+                                            @Html.EditorFor(model => model.areaName, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.areaName, "", new { @class = "text-danger" })
+                                        </div>*@
 
 
 
@@ -167,14 +167,14 @@
                                 </div>
 
                                 @*<div class="form-group col-md-4">
-                                    <label>Agent Name</label>
-                                    @Html.EditorFor(model => model.agentName, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.agentName, "", new { @class = "text-danger" })
-                                </div>*@
+                                        <label>Agent Name</label>
+                                        @Html.EditorFor(model => model.agentName, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.agentName, "", new { @class = "text-danger" })
+                                    </div>*@
 
                                 <div class="form-group col-md-4">
                                     <label>Conduct Person</label>
-                                    @Html.EditorFor(model => model.conductPerson, new { htmlAttributes = new { @class = "form-control"} })
+                                    @Html.EditorFor(model => model.conductPerson, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.conductPerson, "", new { @class = "text-danger" })
                                 </div>
 
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Guardian Phone No</label>
-                                    @Html.EditorFor(model => model.guardianPhoneNo, new { htmlAttributes = new { @class = "form-control"} })
+                                    @Html.EditorFor(model => model.guardianPhoneNo, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.guardianPhoneNo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -310,20 +310,28 @@
                     <div class="subtitle"><h3>Loan Details</h3></div>
                     <div class="row">
                         <div class="col-md-12">
+                            <div class="form-group col-md-4">
+                                <label>Loan Type</label>
+                                @Html.DropDownList("typeOfLoan", new List<SelectListItem>
+                                {
+                                    new SelectListItem{ Text="Flat", Value="1"},
+                                    new SelectListItem{ Text="Div", Value="2"}
+                                }, "--- Select ---", new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.advanceEmi, "", new { @class = "text-danger" })
+                            </div>
                             <div class="row">
 
                                 <div class="form-group col-md-4">
                                     <label>Loan Amount</label>
-                                    @Html.EditorFor(model => model.amountOfLoan, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.amountOfLoan, new { htmlAttributes = new { @class = "form-control", @id = "Amount" } })
                                     @Html.ValidationMessageFor(model => model.amountOfLoan, "", new { @class = "text-danger" })
                                 </div>
 
 
 
-
                                 <div class="form-group col-md-4">
                                     <label>Rate Of Intrest(%)</label>
-                                    @Html.EditorFor(model => model.rateOfIntrestperentage, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.rateOfIntrestperentage, new { htmlAttributes = new { @class = "form-control", @id = "intrest" } })
                                     @Html.ValidationMessageFor(model => model.rateOfIntrestperentage, "", new { @class = "text-danger" })
                                 </div>
 
@@ -332,7 +340,7 @@
 
                                 <div class="form-group col-md-4">
                                     <label>Number Of Installments</label>
-                                    @Html.EditorFor(model => model.numberOfInstallments, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.numberOfInstallments, new { htmlAttributes = new { @class = "form-control", @id = "Installments" } })
                                     @Html.ValidationMessageFor(model => model.numberOfInstallments, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -341,26 +349,19 @@
 
                                 <div class="form-group col-md-4">
                                     <label>Intrest Amount</label>
-                                    @Html.EditorFor(model => model.amountOfIntrest, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.amountOfIntrest, new { htmlAttributes = new { @class = "form-control", @id = "intrestAmount" } })
                                     @Html.ValidationMessageFor(model => model.amountOfIntrest, "", new { @class = "text-danger" })
                                 </div>
 
-
-
-
-                                <div class="form-group col-md-4">
-                                    <label>Total Loan Amount</label>
-                                    @Html.EditorFor(model => model.totalloanAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.totalloanAmount, "", new { @class = "text-danger" })
-                                </div>
-
-
-
-
                                 <div class="form-group col-md-4">
                                     <label>Due Amount</label>
-                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control", @id = "dueAmount" } })
                                     @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Month Loan Amount</label>
+                                    @Html.EditorFor(model => model.totalloanAmount, new { htmlAttributes = new { @class = "form-control", @id = "totalloanAmount" } })
+                                    @Html.ValidationMessageFor(model => model.totalloanAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -623,6 +624,50 @@
             </div>
 
         }
-
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        function update() {
+         
+            let interest = $('#intrest').val(); dueAmount
+            let Installments = $('#Installments').val();
+            let permonth = 1;
+            let amount1 = $("#Amount").val();
+            let dayscount = 30;
+            //let amount2 = parseInt(amount1) + parseInt(interest) * parseInt(amount1) + (parseInt(dayscount) * (perday / 100));
+            let apr = amount1 * interest / 100;
+            $("#intrestAmount").val(apr);
+            let due = amount1 / Installments;
+            $("#dueAmount").val(due);
+            let lone = due + apr;
+            $("#totalloanAmount").val(lone);
+            //  $("#amount3").val(parseFloat(amount2 - amount1).toFixed(2));
+            // $("#amount4").val(apr);
+
+        }
+
+        $("#Installments").focusout(function () {
+       
+            update();
+        })
+
+    });
+
+
+    function addDaysToDate(days) {
+        var mths = new Array("Jan", "Feb", "Mar",
+            "Apr", "May", "Jun", "Jul", "Aug", "Sep",
+            "Oct", "Nov", "Dec");
+
+        var d = new Date();
+        d.setHours(d.getHours() + (24 * days));
+
+        var currD = d.getDate();
+        var currM = d.getMonth();
+        var currY = d.getFullYear();
+
+        return mths[currM] + " " + currD + ", " + currY;
+    }
+
+</script>
