--- a/issFinacial/Views/Installments/Index.cshtml
+++ b/issFinacial/Views/Installments/Index.cshtml
@@ -100,7 +100,7 @@
                                         @Html.DisplayFor(modelItem => item.loanNumber)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.firstDueDate)
+                                        @Html.DisplayFor(modelItem => item.DueDate)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.dueStatus)
@@ -109,7 +109,7 @@
                                         @Html.DisplayFor(modelItem => item.dueAmount)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.loanAmount)
+                                        @Html.DisplayFor(modelItem => item.Intrest)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.numberofDue)
