--- a/issFinacial/Views/VehicleLoanEntries/Details.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Details.cshtml
@@ -333,7 +333,7 @@
                         </dt>
 
                         <dd>
-                            @Html.DisplayFor(model => model.totalloanAmount)
+                            @Html.DisplayFor(model => model.dueAmount)
                         </dd>
 
                         <dt>
