--- a/issFinacial/Views/VehicleLoanEntries/Edit.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Edit.cshtml
@@ -350,8 +350,8 @@
 
                                 <div class="form-group col-md-4">
                                     <label>Total Loan Amount</label>
-                                    @Html.EditorFor(model => model.totalloanAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.totalloanAmount, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
                                 </div>
 
 
