--- a/issFinacial/Views/Installments/Create.cshtml
+++ b/issFinacial/Views/Installments/Create.cshtml
@@ -89,8 +89,8 @@
 
 
                                 <div class="form-group col-md-4">
-                                    @Html.EditorFor(model => model.firstDueDate, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Due Date" } })
-                                    @Html.ValidationMessageFor(model => model.firstDueDate, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Due Date" } })
+                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
                                 </div>
 
 
@@ -108,8 +108,8 @@
                                 </div>
 
                                 <div class="form-group col-md-4">
-                                    @Html.EditorFor(model => model.loanAmount, new { htmlAttributes = new { @class = "form-control", @placeholder = "Loan Amount" } })
-                                    @Html.ValidationMessageFor(model => model.loanAmount, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.Intrest, new { htmlAttributes = new { @class = "form-control", @placeholder = "Loan Amount" } })
+                                    @Html.ValidationMessageFor(model => model.Intrest, "", new { @class = "text-danger" })
                                 </div>
 
                                 <div class="form-group col-md-4">
