--- a/issFinacial/Views/Installments/Delete.cshtml
+++ b/issFinacial/Views/Installments/Delete.cshtml
@@ -93,7 +93,7 @@
                             <div class="form-group row">
                                 <label class="col-lg-2 font-weight-bold">First Due Date</label>:
                                 <div class="col-lg-9">
-                                    @Html.DisplayFor(model => model.firstDueDate)
+                                    @Html.DisplayFor(model => model.DueDate)
                                 </div>
                             </div>
 
@@ -112,7 +112,7 @@
                             <div class="form-group row">
                                 <label class="col-lg-2 font-weight-bold">Loan Amount</label>:
                                 <div class="col-lg-9">
-                                    @Html.DisplayFor(model => model.loanAmount)
+                                    @Html.DisplayFor(model => model.Intrest)
                                 </div>
                             </div>
                             <div class="form-group row">
