--- a/issFinacial/Views/Installments/Details.cshtml
+++ b/issFinacial/Views/Installments/Details.cshtml
@@ -92,7 +92,7 @@
                             <div class="form-group row">
                                 <label class="col-lg-2 font-weight-bold">First Due Date</label>:
                                 <div class="col-lg-9">
-                                    @Html.DisplayFor(model => model.firstDueDate)
+                                    @Html.DisplayFor(model => model.DueDate)
                                 </div>
                             </div>
 
@@ -111,7 +111,7 @@
                             <div class="form-group row">
                                 <label class="col-lg-2 font-weight-bold">Loan Amount</label>:
                                 <div class="col-lg-9">
-                                    @Html.DisplayFor(model => model.loanAmount)
+                                    @Html.DisplayFor(model => model.Intrest)
                                 </div>
                             </div>
                             <div class="form-group row">
