--- a/issFinacial/Views/Installments/Edit.cshtml
+++ b/issFinacial/Views/Installments/Edit.cshtml
@@ -84,10 +84,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.firstDueDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.firstDueDate, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.firstDueDate, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -108,10 +108,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.loanAmount, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Intrest, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.loanAmount, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.loanAmount, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Intrest, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Intrest, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
