--- a/issFinacial/Views/VehicleLoanEntries/Create.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Create.cshtml
@@ -360,8 +360,8 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Month Loan Amount</label>
-                                    @Html.EditorFor(model => model.totalloanAmount, new { htmlAttributes = new { @class = "form-control", @id = "totalloanAmount" } })
-                                    @Html.ValidationMessageFor(model => model.totalloanAmount, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control", @id = "totalloanamount" } })
+                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -636,7 +636,7 @@
             let amount1 = $("#Amount").val();
             let dayscount = 30;
             //let amount2 = parseInt(amount1) + parseInt(interest) * parseInt(amount1) + (parseInt(dayscount) * (perday / 100));
-            let apr = amount1 * interest / 100;
+            let apr =( amount1 * interest / 100)/12;
             $("#intrestAmount").val(apr);
             let due = amount1 / Installments;
             $("#dueAmount").val(due);
@@ -644,7 +644,6 @@
             $("#totalloanAmount").val(lone);
             //  $("#amount3").val(parseFloat(amount2 - amount1).toFixed(2));
             // $("#amount4").val(apr);
-
         }
 
         $("#Installments").focusout(function () {
