--- a/issFinacial/Views/Shared/_Layout.cshtml
+++ b/issFinacial/Views/Shared/_Layout.cshtml
@@ -324,7 +324,7 @@
 
                                 <li class="nav-item"><a href="~/VehicleLoanEntries/Index" class="nav-link">Vehicle Loan</a></li>
                                 <li class="nav-item"><a href="~/Installments/Index" class="nav-link">Installments</a></li>
-
+                                <li class="nav-item"><a href="~/VechicleLoanCollections/Index" class="nav-link">VechicleLoanCollection</a></li>
                             </ul>
                         </li>
                         <li class="nav-item nav-item-submenu">
