--- a/issFinacial/Views/Shared/_Layout.cshtml
+++ b/issFinacial/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Limitless - Responsive Web Application Kit by Eugene Kopyov</title>
+    <title>ISSFinance - Responsive Web Application Kit by Eugene Kopyov</title>
     <!-- Global stylesheets -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
     <link href="~/assets/global_assets/css/icons/icomoon/styles.min.css" rel="stylesheet" type="text/css">
@@ -64,7 +64,7 @@
         </div>
         <div class="navbar-brand text-center text-lg-left">
             <a href="index.html" class="d-inline-block">
-                <img src="~/assets/global_assets/images/logo_light.png" class="d-none d-sm-block" alt="">
+               <h4>Good</h4>
                 <img src="~/assets/global_assets/images/logo_icon_light.png" class="d-sm-none" alt="">
             </a>
         </div>
@@ -161,7 +161,7 @@
                                     </div>
 
                                     <div class="media-body">
-                                        <a href="#">Chris Arney</a> created a new <span class="font-weight-semibold">Design</span> branch in <span class="font-weight-semibold">Limitless</span> repository
+                                        <a href="#">Chris Arney</a> created a new <span class="font-weight-semibold">Design</span> branch in <span class="font-weight-semibold">ISSFinance</span> repository
                                         <div class="font-size-sm text-muted mt-1">2 hours ago</div>
                                     </div>
                                 </li>
@@ -324,7 +324,7 @@
 
                                 <li class="nav-item"><a href="~/VehicleLoanEntries/Index" class="nav-link">Vehicle Loan</a></li>
                                 <li class="nav-item"><a href="~/Installments/Index" class="nav-link">Installments</a></li>
-                                <li class="nav-item"><a href="~/VechicleLoanCollections/Index" class="nav-link">VechicleLoanCollection</a></li>
+                                <li class="nav-item"><a href="~/Report/InstallmentSchedule" class="nav-link">Vechicle Loan Collections</a></li>
                             </ul>
                         </li>
                         <li class="nav-item nav-item-submenu">
