--- a/issFinacial/Views/Installments/Create.cshtml
+++ b/issFinacial/Views/Installments/Create.cshtml
@@ -86,7 +86,10 @@
                                     @Html.ValidationMessageFor(model => model.loanNumber, "", new { @class = "text-danger" })
                                 </div>
 
-
+                                 <div class="form-group col-md-4">
+                                    @Html.EditorFor(model => model.loanAmount, new { htmlAttributes = new { @class = "form-control", @placeholder = "loanAmount" } })
+                                    @Html.ValidationMessageFor(model => model.loanAmount, "", new { @class = "text-danger" })
+                                </div>
 
                                 <div class="form-group col-md-4">
                                     @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Due Date" } })
@@ -115,6 +118,10 @@
                                 <div class="form-group col-md-4">
                                     @Html.EditorFor(model => model.numberofDue, new { htmlAttributes = new { @class = "form-control", @placeholder = "Number of Due" } })
                                     @Html.ValidationMessageFor(model => model.numberofDue, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group col-md-4">
+                                    @Html.EditorFor(model => model.totalAmount, new { htmlAttributes = new { @class = "form-control", @placeholder = "totalAmount" } })
+                                    @Html.ValidationMessageFor(model => model.totalAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="text-right">
