--- a/issFinacial/Views/VehicleLoanEntries/Edit.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Edit.cshtml
@@ -310,20 +310,28 @@
                     <div class="subtitle"><h3>Loan Details</h3></div>
                     <div class="row">
                         <div class="col-md-12">
+                            <div class="form-group col-md-4">
+                                <label>Loan Type</label>
+                                @Html.DropDownList("typeOfLoan", new List<SelectListItem>
+                                {
+                                    new SelectListItem{ Text="Flat", Value="1"},
+                                    new SelectListItem{ Text="Div", Value="2"}
+                                }, "--- Select ---", new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.advanceEmi, "", new { @class = "text-danger" })
+                            </div>
                             <div class="row">
 
                                 <div class="form-group col-md-4">
                                     <label>Loan Amount</label>
-                                    @Html.EditorFor(model => model.amountOfLoan, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.amountOfLoan, new { htmlAttributes = new { @class = "form-control", @id = "Amount" } })
                                     @Html.ValidationMessageFor(model => model.amountOfLoan, "", new { @class = "text-danger" })
                                 </div>
 
 
 
-
                                 <div class="form-group col-md-4">
                                     <label>Rate Of Intrest(%)</label>
-                                    @Html.EditorFor(model => model.rateOfIntrestperentage, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.rateOfIntrestperentage, new { htmlAttributes = new { @class = "form-control", @id = "intrest" } })
                                     @Html.ValidationMessageFor(model => model.rateOfIntrestperentage, "", new { @class = "text-danger" })
                                 </div>
 
@@ -332,53 +340,49 @@
 
                                 <div class="form-group col-md-4">
                                     <label>Number Of Installments</label>
-                                    @Html.EditorFor(model => model.numberOfInstallments, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.numberOfInstallments, new { htmlAttributes = new { @class = "form-control", @id = "Installments" } })
                                     @Html.ValidationMessageFor(model => model.numberOfInstallments, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="row">
 
+
+
+
+                                <div class="form-group col-md-4">
+                                    <label>Document Amount</label>
+                                    @Html.EditorFor(model => model.documentAmount, new { htmlAttributes = new { @class = "form-control", @id = "documentAmount" } })
+                                    @Html.ValidationMessageFor(model => model.documentAmount, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Commision Amount</label>
+                                    @Html.EditorFor(model => model.commisionAmount, new { htmlAttributes = new { @class = "form-control", @id = "commisionAmount" } })
+                                    @Html.ValidationMessageFor(model => model.commisionAmount, "", new { @class = "text-danger" })
+                                </div>
                                 <div class="form-group col-md-4">
                                     <label>Intrest Amount</label>
-                                    @Html.EditorFor(model => model.amountOfIntrest, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.amountOfIntrest, new { htmlAttributes = new { @class = "form-control", @id = "intrestAmount" } })
                                     @Html.ValidationMessageFor(model => model.amountOfIntrest, "", new { @class = "text-danger" })
-                                </div>
-
-
-
-
-                                <div class="form-group col-md-4">
-                                    <label>Total Loan Amount</label>
-                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
-                                </div>
-
-
-
-
-                                <div class="form-group col-md-4">
-                                    <label>Due Amount</label>
-                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="row">
-
                                 <div class="form-group col-md-4">
-                                    <label>Document Amount</label>
-                                    @Html.EditorFor(model => model.documentAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.documentAmount, "", new { @class = "text-danger" })
+                                    <label>Due Amount</label>
+                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control", @id = "dueAmount" } })
+                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
                                 </div>
 
-
-
-
                                 <div class="form-group col-md-4">
-                                    <label>Commision Amount</label>
-                                    @Html.EditorFor(model => model.commisionAmount, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.commisionAmount, "", new { @class = "text-danger" })
+                                    <label>Month Loan Amount</label>
+                                    @Html.EditorFor(model => model.dueAmount, new { htmlAttributes = new { @class = "form-control", @id = "totalloanamount" } })
+                                    @Html.ValidationMessageFor(model => model.dueAmount, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Total Amount</label>
+                                    @Html.EditorFor(model => model.totalAmount, new { htmlAttributes = new { @class = "form-control", @id = "totalAmount" } })
+                                    @Html.ValidationMessageFor(model => model.totalAmount, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -626,3 +630,54 @@
 
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        function update() {
+
+            let interest = $('#intrest').val();
+            let Installments = $('#Installments').val();
+            let document = $('#documentAmount').val();
+            let commision = $('#commisionAmount').val();
+
+            let permonth = 1;
+            let amount1 = $("#Amount").val();
+            let dayscount = 30;
+            //let amount2 = parseInt(amount1) + parseInt(interest) * parseInt(amount1) + (parseInt(dayscount) * (perday / 100));
+            let apr = (amount1 * interest / 100) / 12;
+            $("#intrestAmount").val(apr);
+            let due = amount1 / Installments;
+            $("#dueAmount").val(due);
+            let lone = apr + due;
+            $("#totalloanamount").val(lone);
+            let totalamount = parseInt(amount1) + parseInt(document) + parseInt(commision) + (apr * parseInt(Installments));
+            $("#totalAmount").val(totalamount);
+            //Totalloanamount=(Dueamount-totalloanamount);
+            //  $("#amount3").val(parseFloat(amount2 - amount1).toFixed(2));
+            // $("#amount4").val(apr);
+        }
+
+        $("#commisionAmount").focusout(function () {
+
+            update();
+        })
+
+
+    });
+
+
+    function addDaysToDate(days) {
+        var mths = new Array("Jan", "Feb", "Mar",
+            "Apr", "May", "Jun", "Jul", "Aug", "Sep",
+            "Oct", "Nov", "Dec");
+
+        var d = new Date();
+        d.setHours(d.getHours() + (24 * days));
+
+        var currD = d.getDate();
+        var currM = d.getMonth();
+        var currY = d.getFullYear();
+
+        return mths[currM] + " " + currD + ", " + currY;
+    }
+
+</script>
